*Empty MediaWiki Message*

--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -35,3 +35,5 @@
 सगळ्यांत लागीं हेर वैजकीय सुविधा ४ किमी हांगां आसा.
 शारांत ३ खाजगी बाह्यरुग्ण वैजकी सुविधा आसा.
 शारांत ३ खाजगी निवासी आनी बाह्यरुग्ण वैजकीय सुविधा आसा.
+
+शारांत २ खाजगी वखदां दुकान आसा.
