*Empty MediaWiki Message*

--- a/मडकय.mw
+++ b/मडकय.mw
@@ -13,7 +13,7 @@
 
 
 == साक्षरता ==  
-* एकूण साक्षर लोकसंख्या: ४९६७
+* पुराय साक्षर लोकसंख्या: ४९६७
 * साक्षर दादल्यांची लोकसंख्या: २७१७ (८६.४५%)
 * साक्षर बायलांची लोकसंख्या: २२५० (७३.२४%)
 
@@ -44,7 +44,7 @@
 
 
 == शैक्षणिक सुविधा ==
-शारांत ८ शासकीय प्राथमिक शाळा आसा.  
+शारांत ८ सरकारी प्राथमिक शाळा आसा.  
  शारांत २ खाजगी कनिश्ठ माध्यमिक शाळा  आसा.  
  शारांत २ खाजगी माध्यमिक शाळा आसा.  
  ﻿शारांत १ खाजगी उच्च माध्यमिक शाळा आसा.  
