--- a/भुंयपाल.mw
+++ b/भुंयपाल.mw
@@ -26,7 +26,7 @@
 सगळ्यांत लागीं समाजीक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमीक आरोग्य केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमीक आरोग्य उपकेंद्र  ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-सगळ्यांत लागीं प्रसूति आनी बालकल्याण केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं प्रसूती आनी बाल कल्याण केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं क्षयरोग उपचार केंद्र  ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
