--- a/असोडें.mw
+++ b/असोडें.mw
@@ -34,3 +34,7 @@
 
 
 == शैक्षणिक सुविधा ==
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (VALPOI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं प्राथमिक शाळा (GOVANEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (XELOPO-CURDO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (XELOPO-CURDO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
