*Empty MediaWiki Message*

--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -33,10 +33,11 @@
 सगळ्यांत लागीं शासकीय अपंगां खातीर खाशेली शाळा PENHA DE FRANCA C T (१० किमी) हांगां आसा.
 
 सुविधा
+
 सगळ्यांत लागीं खाजगी अऩाथाश्रम PANAJI (१३ किमी) हांगां आसा.
 सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA C T (११ किमी) हांगां आसा.
 शारांत २ खाजगी वृद्धाश्रम आसा. 
-
+सगळ्यांत लागीं शासकीय खेळांगण MAPUSA (७ किमी) हांगां आसा.
 == '''संदर्भ''' ==
 
 
