--- a/शिरदोण.mw
+++ b/शिरदोण.mw
@@ -54,6 +54,8 @@
 * एकूण बागायत जमीन: २.१
 
 == '''शिंपणावळ सुविधा''' ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+
 == '''संदर्भ''' ==
 
 
