--- a/असोडें.mw
+++ b/असोडें.mw
@@ -38,3 +38,5 @@
 सगळ्यांत लागीं प्राथमिक शाळा (GOVANEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (XELOPO-CURDO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (XELOPO-CURDO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (VALPOI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
