--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -42,3 +42,4 @@
 शारांत ३ शासकीय प्राथमिक शाळा आसा. शारांत २ खाजगी प्राथमिक शाळा आसा. 
  ﻿शारांत १ खाजगी कनिश्ठ माध्यमिक शाळा  आसा.  
  ﻿शारांत १ खाजगी माध्यमिक शाळा आसा.
+सगळ्यांत लागीं शासकीय उच्च माध्यमिक शाळा PANAJI (९ किमी) हांगां आसा.
