*Empty MediaWiki Message*

--- a/अर्थशास्त्र.mw
+++ b/अर्थशास्त्र.mw
@@ -1,5 +1,5 @@
 
-अर्थशास्त्र हो पोरन्या काळा सावन म्हत्वाचो अभ्यास विशय अशें मानलां. क्रिस्ता पयलीं चवथ्या शतमानांत भारताचो कौटिल्य आनी ग्रीसाचो अॅरिस्टॉटल ह्या पंडितांनी ह्या विशयाचेर ग्रंथ बरोवन दवरल्यात. कौटिल्य हाणें आपल्या पयलींच्या अठरा आचार्य परंपरेचो उल्लेख करून अर्थशास्त्राची व्याख्या केल्या ती अशीः
+'''अर्थशास्त्र''' हो पोरन्या काळा सावन म्हत्वाचो अभ्यास विशय अशें मानलां. क्रिस्ता पयलीं चवथ्या शतमानांत भारताचो कौटिल्य आनी ग्रीसाचो अॅरिस्टॉटल ह्या पंडितांनी ह्या विशयाचेर ग्रंथ बरोवन दवरल्यात. कौटिल्य हाणें आपल्या पयलींच्या अठरा आचार्य परंपरेचो उल्लेख करून अर्थशास्त्राची व्याख्या केल्या ती अशीः
 
 “मनुष्याणां वृतिः अर्थः मनुष्यवती भूमिरित्यर्थः।
 
