--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -43,3 +43,6 @@
  ﻿शारांत १ खाजगी कनिश्ठ माध्यमिक शाळा  आसा.  
  ﻿शारांत १ खाजगी माध्यमिक शाळा आसा.
 सगळ्यांत लागीं शासकीय उच्च माध्यमिक शाळा PANAJI (९ किमी) हांगां आसा.
+
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (२८ किमी) हांगां आसा.
+  सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१० किमी) हांगां आसा.
