*Empty MediaWiki Message*

--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -46,3 +46,5 @@
 
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (२८ किमी) हांगां आसा.
   सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१० किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) PERNEM RURAL (३० किमी) हांगां आसा.
+  सगळ्यांत लागीं "खाजगी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" MAPUSA (११ किमी) हांगां आसा.
