--- a/कडवळ.mw
+++ b/कडवळ.mw
@@ -137,6 +137,39 @@
 ० वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 ० वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 == जमिनीचो वापर ==
+कडवळ ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : ८७१.१२
+* शेतकामा खातीर ना वापरिल्ली जमीन: ०
+* ओसाड आनी लागवड ना केल्ली जमीन: १२.६५
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: ३.१९
+* कायमस्वरूपी पडीक जमीन: ०
+* सद्यस्थितींत पडीक जमीन: ०
+* पिकां सकयली जमीन: ०.२९
+* एकूण कोरड व्हांवपी जमीन: ०.२९
+* एकूण बागायत जमीन: ०
+
+
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०
+* तळी: ०
+* ओढे: ०
+* हेर: ०
+
+
+== उत्पादन ==
+कडवळ ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR,WOODENFURNITURE
+
+
+[[वर्ग:[[उत्तर गोवा]]]]
+[[वर्ग:[[सत्तरी]]]]
+[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
 
 == '''संदर्भ''' ==
 
