--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -48,3 +48,5 @@
   सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१० किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) PERNEM RURAL (३० किमी) हांगां आसा.
   सगळ्यांत लागीं "खाजगी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" MAPUSA (११ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (११ किमी) हांगां आसा.
+  सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (१७ किमी) हांगां आसा.
