--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -38,6 +38,19 @@
 सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA C T (११ किमी) हांगां आसा.
 शारांत २ खाजगी वृद्धाश्रम आसा. 
 सगळ्यांत लागीं शासकीय खेळांगण MAPUSA (७ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी चित्रपटगृह MAPUSA (५ किमी) हांगां आसा.
+
+
+
+
+
+
+
+
+
+
+
+
 == '''संदर्भ''' ==
 
 
