*Empty MediaWiki Message*

--- a/अर्थशास्त्र.mw
+++ b/अर्थशास्त्र.mw
@@ -1,9 +1,9 @@
 
 '''अर्थशास्त्र''' हो पोरन्या काळा सावन म्हत्वाचो अभ्यास विशय अशें मानलां. क्रिस्ता पयलीं चवथ्या शतमानांत भारताचो कौटिल्य आनी ग्रीसाचो अॅरिस्टॉटल ह्या पंडितांनी ह्या विशयाचेर ग्रंथ बरोवन दवरल्यात. कौटिल्य हाणें आपल्या पयलींच्या अठरा आचार्य परंपरेचो उल्लेख करून अर्थशास्त्राची व्याख्या केल्या ती अशीः
 
-“मनुष्याणां वृतिः अर्थः मनुष्यवती भूमिरित्यर्थः।
+'''“मनुष्याणां वृतिः अर्थः मनुष्यवती भूमिरित्यर्थः।
 
-तस्याः पृथिव्या लाभपालनोपायः शास्त्रमर्थशास्त्राम् ।।”
+तस्याः पृथिव्या लाभपालनोपायः शास्त्रमर्थशास्त्राम् ।।”'''
 
 अर्थः पृथ्वी हें मनशाचें रावपाचे ठिकाण; हे पृथ्वीच्या (सैमीक सामग्रीच्या) पलवान मनशाची जीण चलता (गरजो भागतात). तिचो (सैमीक सामग्रीचो) लाब आनी संवर्धन (पालन) विशींच्या उपायांचो अभ्यास म्हळ्यार अर्थशास्त्र
 
