*Empty MediaWiki Message*

--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -50,3 +50,5 @@
   सगळ्यांत लागीं "खाजगी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" MAPUSA (११ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (११ किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (१७ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PANAJI (१० किमी) हांगां आसा.
+  सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM (CT) (१५ किमी) हांगां आसा.
