--- a/शिरदोण.mw
+++ b/शिरदोण.mw
@@ -63,6 +63,8 @@
 * हेर: ०
 
 == '''उत्पादन''' ==
+शिरदोण ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): VEGETABLES,ICE,BACKERY PRODUCT
+
 == '''संदर्भ''' ==
 
 
