--- a/भुंयपाल.mw
+++ b/भुंयपाल.mw
@@ -47,7 +47,7 @@
 गांवांत झरीचें उदक पुरवण ना.
 गांवांत न्हय/खाजनाचें उदक पुरवण ना.
 गांवांत तळी/कोंड उदक पुरवण आसा.
-गांवांत अन्य पद्धतीचे उदक पुरवण आसा.
+गांवांत हेर पद्धतीचे उदक पुरवण आसा.
 
 नितळसाण ==
 गांवांत बंद गटार उपलब्ध ना.
