*Empty MediaWiki Message*

--- a/अर्थशास्त्र.mw
+++ b/अर्थशास्त्र.mw
@@ -3,7 +3,7 @@
 
 '''“मनुष्याणां वृतिः अर्थः मनुष्यवती भूमिरित्यर्थः।
 
-तस्याः पृथिव्या लाभपालनोपायः शास्त्रमर्थशास्त्राम् ।।”'''
+'''तस्याः पृथिव्या लाभपालनोपायः शास्त्रमर्थशास्त्राम् ।।”''''''
 
 अर्थः पृथ्वी हें मनशाचें रावपाचे ठिकाण; हे पृथ्वीच्या (सैमीक सामग्रीच्या) पलवान मनशाची जीण चलता (गरजो भागतात). तिचो (सैमीक सामग्रीचो) लाब आनी संवर्धन (पालन) विशींच्या उपायांचो अभ्यास म्हळ्यार अर्थशास्त्र
 
