*Empty MediaWiki Message*

--- a/आंबेली.mw
+++ b/आंबेली.mw
@@ -1,27 +1,53 @@
-{{माहितीचौकट भारतीय न्यायक्षेत्र
-|प्रकार = गांव
-|जनगणना २०११_स्थलनिर्देशांक=626922
-|थळावें_नांव=आंबेली
-|तालुका_नांव=सास्टी
-|जिल्लो_नांव=दक्षिण गोवा
-|राज्य_नांव=गोंय
-|विभाग=
-|जिल्लो=[[दक्षिण गोवा]]
-|तालुका_नांवां=[[सास्टी]]
-|लागींचे_शार=[[CUNCOLIM]]
-|अक्षांश=
-|रेखांश=
-|शोधक_स्थान=right
-|क्षेत्रफळ_एकूण=3.89
-|समुद्र तळा पसून उंची=
-|लोकसंख्या_एकूण=2853
-|लोकसंख्या_वर्स=2011
-|लोकसंख्या_घनत्व=733
-|लोकसंख्या_पुरुश=1340
-|लोकसंख्या_स्त्री=1513
-|लिंग_गुणोत्तर=1129
-|अधिकृत_भास=[[कोंकणी]]
+{{Infobox settlement
+| name                   = आंगोद
+| native_name            = 
+| native_name_lang       = 
+| other_name             = 
+| nickname               = 
+| settlement_type        = गांव
+| image_skyline          = 
+| image_alt              = 
+| image_caption          = 
+| pushpin_map            = India Goa 
+| pushpin_label_position = 
+| pushpin_map_alt        = 
+| pushpin_map_caption    = आंबेली गोंयातलो
+| latd                   = 15.46
+| latm                   =
+| lats                   = 
+| latNS                  = N
+| longd                  = 74.16 
+| longm                  = 
+| longs                  = 
+| longEW                 = E
+| coordinates_display    = 
+| subdivision_type       = देश
+| subdivision_name       = भारत
+| subdivision_type1      = राज्य
+| subdivision_name1      = गोंय
+| subdivision_type2      = जिल्लो
+| subdivision_name2      = दक्षिण गोंय
+| subdivision_type3      = तालुका
+| subdivision_name3      = साश्टी
+| unit_pref              = Metric
+| area_footnotes         = 
+| area_rank              = 
+| area_total_km2         =
+| population_total       = २८५३
+| population_as_of       = २०११
+| population_rank        = 
+| population_density_km2 = auto
+| population_demonym     = 
+| population_footnotes   = 
+| timezone1              = इंडियन स्टांडर्ड टाइम
+| utc_offset1            = +५:३०
+| postal_code_type       = 
+| postal_code            = ४०३१०५
+| area_code              = ९१ ०८३२
+| website                = 
+| footnotes              = 
 }}
+
 == आंबेली (६२६९२२) ==
 == नितळसाण ==
 
