--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -31,5 +31,9 @@
 == शैक्षणिक सुविधा ==
 गांवांत १५ शासकीय पूर्व-प्राथमिक शाळा आसा. गांवांत २ खाजगी पूर्व-प्राथमिक शाळा आसा.
 गांवांत १७ शासकीय प्राथमिक शाळा आसा. गांवांत ६ खाजगी प्राथमिक शाळा आसा.
- गांवांत ६ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
- गांवांत ६ खाजगी माध्यमिक शाळा आसा.
+गांवांत ६ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
+गांवांत ६ खाजगी माध्यमिक शाळा आसा.
+गांवांत २ खाजगी उच्च माध्यमिक शाळा आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+﻿गांवांत १ खाजगी अभियांत्रिकी  महाविद्यालय आसा.
+गांवांत २ खाजगी वैजकी महाविद्यालय आसा.
