--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -54,3 +54,5 @@
   सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM (CT) (१५ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA C  T (३९ किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय वैवस्थापन संस्था  PENHA DE FRANCA (CT) (५ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (१० किमी) हांगां आसा.
+  सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा PANAJI (८ किमी) हांगां आसा.
