--- a/अर्थशास्त्र.mw
+++ b/अर्थशास्त्र.mw
@@ -5,7 +5,8 @@
 
 '''तस्याः पृथिव्या लाभपालनोपायः शास्त्रमर्थशास्त्राम् ।।”''''''
 
-अर्थः पृथ्वी हें मनशाचें रावपाचे ठिकाण; हे पृथ्वीच्या (सैमीक सामग्रीच्या) पलवान मनशाची जीण चलता (गरजो भागतात). तिचो (सैमीक सामग्रीचो) लाब आनी संवर्धन (पालन) विशींच्या उपायांचो अभ्यास म्हळ्यार अर्थशास्त्र
+== '''अर्थ''' ==
+पृथ्वी हें मनशाचें रावपाचे ठिकाण; हे पृथ्वीच्या (सैमीक सामग्रीच्या) पलवान मनशाची जीण चलता (गरजो भागतात). तिचो (सैमीक सामग्रीचो) लाब आनी संवर्धन (पालन) विशींच्या उपायांचो अभ्यास म्हळ्यार अर्थशास्त्र
 
 कौटिल्याच्या काळावयलो युरोपांतलो विचारवंत अॅरिस्टॉटल (इ. स. पयलीं 384-322) हाणें ह्या विशयाचे दोन वांटे केल्यातः
 
