--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -56,3 +56,5 @@
   सगळ्यांत लागीं शासकीय वैवस्थापन संस्था  PENHA DE FRANCA (CT) (५ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (१० किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा PANAJI (८ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  PANAJI (९ किमी) हांगां आसा.
+  सगळ्यांत लागीं शासकीय अपंगां खातीर खाशेली शाळा PENHA DE FRANCA C T (६ किमी) हांगां आसा.
