--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -24,3 +24,4 @@
 }}
 
 == असनोडा ==
+असनोडा हे उत्तर गोवा जिल्ह्यातल्या बार्देस तालुक्यातील ३६८.८२ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ९४४ कुटुंबाचे व पुराय ३८७० लोकसंख्या आसा.
