--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -37,3 +37,8 @@
 सगळ्यांत लागीं पदवी महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 ﻿गांवांत १ खाजगी अभियांत्रिकी  महाविद्यालय आसा.
 गांवांत २ खाजगी वैजकी महाविद्यालय आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं पॉलिटेक्निक (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+﻿गांवांत १ शासकीय अनौपचारिक प्रशिक्षणकेंद्र  आसा. 
+ सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (QUELA C T) १० किलोमिटर परस चड अंतराचेर आसा.
