--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -40,7 +40,7 @@
 सगळ्यांत लागीं शासकीय खेळांगण MAPUSA (७ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी चित्रपटगृह MAPUSA (५ किमी) हांगां आसा.
 शारांत १ शासकीय सभाघर आसा. ﻿शारांत १ खाजगी सभाघर आसा. 
-
+सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  MAPUSA (५ किमी) हांगां आसा.
 
 
 
