--- a/आंबेली.mw
+++ b/आंबेली.mw
@@ -49,6 +49,15 @@
 }}
 
 == आंबेली (६२६९२२) ==
+
+आंबेली हे दक्षिण गोवा जिल्ह्यातल्या सास्टी तालुक्यातील ३८९ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ६९३ कुटुंबाचे व पुराय २८५३ लोकसंख्या आसा. हांगा लागीचे शार CUNCOLIM ७ किलोमीटर अंतरावर आसा. हांगा १३४० दादले आनीक १५१३ बायला आसा. हांगा अनुसूचित जातीचे लोक ६ आसून अनुसूचित जमातीचे ६७० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६९२२  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+
+
+== साक्षरताय ==  
+* एकूण साक्षर लोकसंख्या: २१६२
+* साक्षर पुरुश लोकसंख्या: १०८३ (८०.८२%)
+* साक्षर स्त्री लोकसंख्या: १०७९ (७१.३२%)
+
 == नितळसाण ==
 
 == दळणवळण आनीक येरादारी ==
