--- a/मडकय.mw
+++ b/मडकय.mw
@@ -86,3 +86,14 @@
 शारांत २ बिगर शेतकी रीण संस्था आसा.
 
 == संदर्भ ==
+
+
+
+
+
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:बारदेस तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
