*Empty MediaWiki Message*

--- a/मडकय.mw
+++ b/मडकय.mw
@@ -57,8 +57,8 @@
   सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (३१ किमी) हांगां आसा.
   सगळ्यांत लागीं सरकारी पदवी महाविद्यालय- विद्यापीठ PANAJI (३७ किमी) हांगां आसा.
   सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PONDA (१६ किमी) हांगां आसा.
-  सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM CT (३७ किमी) हांगां आसा.
-  सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA CT (१६ किमी) हांगां आसा.
+  सगळ्यांत लागीं सरकारी वैजकी महाविद्यालय BAMBOLIM CT (३७ किमी) हांगां आसा.
+  सगळ्यांत लागीं सरकारी अभियांत्रिकी महाविद्यालय BANDORA CT (१६ किमी) हांगां आसा.
   सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  PANAJI (३१ किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (३१ किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा PANAJI (२५ किमी) हांगां आसा.
