--- a/आंबेली.mw
+++ b/आंबेली.mw
@@ -58,6 +58,21 @@
 * साक्षर पुरुश लोकसंख्या: १०८३ (८०.८२%)
 * साक्षर स्त्री लोकसंख्या: १०७९ (७१.३२%)
 
+== शैक्षणिक सुविधा ==  
+ सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (VELIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं प्राथमिक शाळा (VELIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (VELIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं माध्यमिक शाळा (VELIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (CUNCOLIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं पदवी महाविद्यालय (CUNCOLIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैवस्थापन  संस्था  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं पॉलिटेक्निक (VERNA CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (CHINCHINIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+
 == नितळसाण ==
 
 == दळणवळण आनीक येरादारी ==
