--- a/अंदमान_आनी_निकोबार.mw
+++ b/अंदमान_आनी_निकोबार.mw
@@ -17,11 +17,11 @@
 ब्लेअर ङांगा आसा. अंदमानांत ग्रामपंचायती आनी न्यायपंचायती आसात. निकोबारांत पंचायत वेवस्था परंपरे प्रमाण चलता. ह्या प्रदेशांत एक प्रशासक , अधिकाऱ्यांच्या आदारान जुंव्याचो कारभार पळयता. निकोबार जुंव्या खातीर पालवी अधिकारी आसता. 1967 वर्सा सावन राष्ट्रपतीन वेंचून काडिल्लो एक प्रतिनिधी लोकसभेंत आसता. हांगाच्या प्रशासकाच्या शिफारसी प्रमाण थळाव्या स्वराज्य संस्थेचो प्रतिनिधी वेंचून काडटात.
 
 == '''आर्थीक स्थिती''' ==
-अंदमान आनी निकोबार प्रदेशाचो 77% वाठार रानान व्यापिल्लो आसा. कांय कडेन पावसाच्या परिणामाक लागून ‘जांभ्या’ ह्या फातरा पासून तयार जाल्ली जमीन आसा. हाका लागून खुबूच उण्या प्रमाणांत जमीन शेतां खातीर मेळटा. ह्या प्रदेशाच्या 7441 हॅक्टर सुवातीर भाताचें पीक काडटात. नाल्ल आनी भात ही हांगाचीं दोन मुखेल पिकां. हांगाचो मुखेल वेपार लाकूड आनी नाल्ला वरवीं जाता. पोर्ट ब्लेअराक लाकूड कापपाची बंगसाळ, फस्कां आनी प्लायवूड तयार करपाचे कारखाने आसात. ते भायर दर्या देगेर नुस्तें मारप, शंख शिंपयो एकठांय करप, कांसव धरप, आदी उद्देग थंय चलतात.
+अंदमान आनी निकोबार प्रदेशाचो 77% वाठार रानान व्यापिल्लो आसा. कांय कडेन पावसाच्या परिणामाक लागून ‘जांभ्या’ ह्या फातरा पासून तयार जाल्ली जमीन आसा. हाका लागून खुबूच उण्या प्रमाणांत जमीन शेतां खातीर मेळटा. ह्या प्रदेशाच्या 7441 हॅक्टर सुवातीर भाताचें पीक काडटात. नाल्ल आनी भात हीं हांगाचीं दोन मुखेल पिकां. हांगाचो मुखेल वेपार लाकूड आनी नाल्ला वरवीं जाता. पोर्ट ब्लेअराक लाकूड कापपाची बंगसाळ, फस्कां आनी प्लायवूड तयार करपाचे कारखाने आसात. ते भायर दर्या देगेर नुस्तें मारप, शंख शिंपयो एकठांय करप, कांसव धरप, आदी उद्देग थंय चलतात.
 
-रानांतल्या भितरल्या वाठारांत कांय पंगड जनावरांची शिकार करून आपलें पोट भरतात. कांय वाठारांनी कुकडां पोसप, दुदाचो वेवसाय करप, बोटी बांदप, नुस्तेमारी, आदी धंद्यांनी उदरगत करपाचो यत्न चल्ला. हांगाच्या सहकारी संस्थाची वाड करपाची, तेच परी गरजेवंत शेतकामत्यांक आनी कामगारांक रिणां दिवपाची वेवस्था केल्या. निकोबार सावन नुस्तें, सुपारी आदी वस्तू चीना कडेन निर्यात जातात आनी तांदूळ, तंबाखू, कपडे, शास्त्रां आदी वस्तू तांकां आयात करच्यो पडटात.
+रानांतल्या भितरल्या वाठारांत कांय पंगड जनावरांची शिकार करून आपलें पोट भरतात. कांय वाठारांनीं कुकडां पोसप, दुदाचो वेवसाय करप, बोटी बांदप, नुस्तेमारी, आदी धंद्यांची उदरगत करपाचो यत्न चल्ला. हांगाच्या सहकारी संस्थांची वाड करपाची, तेच परी गरजेवंत शेतकामत्यांक आनी कामगारांक रिणां दिवपाची वेवस्था केल्या. निकोबार सावन नुस्तें, सुपारी आदी वस्तू चीना कडेन निर्यात जातात आनी तांदूळ, तंबाखू, कपडे, शास्त्रां आदी वस्तू तांकां आयात करच्यो पडटात.
 
-हांअंदमान- निकोबार जुंव्याचेर शारांत आनी गांवगिऱ्या भागांत मोटार, बस, ट्रक आदी वाहना वरवीं येरादारीची वेवस्था आसा. ते भायर दरेक जुंव्याचेर वचूंक बोटीची वेवस्था आसा. अंदमानांत पोर्ट ब्लेअर, पोर्ट कॉर्नवालीस, मायाबंदर आनी निकोबारांत कामोर्ता, त्रिंकत, नानकवरी असीं बंदरां आसात. भारता कडेन अंदमान निकोबार जुंव्यांची येरादारी आग बोटी वरवीं जाता. कलकत्ता ते पोर्ट ब्लेअर शारांक रंगून मार्गान विमान येरादारीची वेवस्था आसा. मद्रास सावनय थंय विमानान वचपाची वेवस्था आसा.
+अंदमान- निकोबार जुंव्याचेर शारांत आनी गांवगिऱ्या भागांत मोटार, बस, ट्रक आदी वाहना वरवीं येरादारीची वेवस्था आसा. ते भायर दरेक जुंव्याचेर वचूंक बोटीची वेवस्था आसा. अंदमानांत पोर्ट ब्लेअर, पोर्ट कॉर्नवालीस, मायाबंदर आनी निकोबारांत कामोर्ता, त्रिंकत, नानकवरी अशीं बंदरां आसात. भारता कडेन अंदमान निकोबार जुंव्यांची येरादारी आग बोटी वरवीं जाता. कलकत्ता ते पोर्ट ब्लेअर शारांक रंगून मार्गान विमान येरादारीची वेवस्था आसा. मद्रास सावनय थंय विमानान वचपाची वेवस्था आसा.
 
 == '''लोक आनी समाजजीण''' ==
 अंदमानातले मुळ लोक नेग्रिटी वंशाचे. जारवा, ओंगी सेंटिनेली आनी शॉमपेन ह्यो तांच्यो पोटजाती आसात. तांच्या पंगडांच्या मुखेल्या कडेन सगळे हक्क आसतात. ताचीं घरां घुमटा आकाराचीं आसतात. हांगाचें हवामान उश्ण आशिल्ल्यान हांगाचे लोक लज राखपा पुरतीं झाडांची पानां वापरतात. हे लोक बुद्धीन मंद आनी खूब सोशीक आसात. तांचो रंग काळो आनी कात तुकतुकीत. तांच्या जेवणांत नाल्ल, नुस्तें, रानमाजर, कांसव, कंदमुळां, म्होंव हांचो आस्पाव आसता. घोव वा बायल मरतकच तांणी परतें लग्न करूं येता. पुलुगा ह्या दैवताक ते मानतात. सद्या अंदमानांतल्या ह्या आदिवासी लोकांची संख्या उणी जायत चल्ल्या. तातूंत बायलो तर सामक्योच उण्यो.गा कॉफी, कोको, रबर आनी मसाल्यांचे पदार्थ हांचे उत्पादन करपाचो यत्न भारत सरकारा वरवीं चल्ला.
