*Empty MediaWiki Message*

--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -58,3 +58,7 @@
   सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा PANAJI (८ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  PANAJI (९ किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय अपंगां खातीर खाशेली शाळा PENHA DE FRANCA C T (६ किमी) हांगां आसा.
+
+== सुविधा ==
+  सगळ्यांत लागीं शासकीय अनाथाश्रम PANAJI (१० किमी) हांगां आसा.
+  सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA C T (५ किमी) हांगां आसा.
