--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -43,7 +43,7 @@
 सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  MAPUSA (५ किमी) हांगां आसा.
 
 उत्पादन
-
+साळगांव ह्या शारांत मुखा वयल्या वस्तूंचें उत्पादन जाता ( म्हत्वाच्या देंवत्या अनुक्रमान): COUNTRY LIQUOR,BAKERY PRODUCT,IRON GRILLS 
 
 
 
