--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -62,3 +62,5 @@
 == सुविधा ==
   सगळ्यांत लागीं शासकीय अनाथाश्रम PANAJI (१० किमी) हांगां आसा.
   सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA C T (५ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय वृद्धाश्रम CANDOLIM C T (६ किमी) हांगां आसा.
+  सगळ्यांत लागीं शासकीय खेळांगण MAPUSA (१२ किमी) हांगां आसा.
