*Empty MediaWiki Message*

--- a/अर्थशास्त्र.mw
+++ b/अर्थशास्त्र.mw
@@ -10,7 +10,9 @@
 
 कौटिल्याच्या काळावयलो युरोपांतलो विचारवंत अॅरिस्टॉटल (इ. स. पयलीं 384-322) हाणें ह्या विशयाचे दोन वांटे केल्यातः
 
-1. अर्थशास्त्र म्हळ्यार घरगुती वेव्हार आनी 2. पुरवणशास्त्र म्हळ्यार विनीमय आनी अर्थार्जन.
+== '''अर्थशास्त्र म्हळ्यार घरगुती वेव्हार''' == 
+
+== '''पुरवणशास्त्र म्हळ्यार विनीमय आनी अर्थार्जन''' ==
 
 अॅडम स्मिथ (इ. स. 1723-1790) ह्या ब्रिटिश अर्थशास्त्रज्ञाक आर्विल्ल्या ‘अर्थशास्त्राचो मूळपुरूश’ मानतात. ताणें ‘राश्ट्राचे संपत्तीचें स्वरुप आनी कारणां हांचें अन्वेशण’ अशी अर्थशास्त्रची व्याख्या केल्या. अर्थशास्त्राविशीं हेर बऱ्योचशो व्याख्या आसात त्यो अशोः 1. पैशांच्या पालवान वा त्या खेरीज लोकांमदीं विनीमय वेव्हाराचीं जीं कार्यां जातात तांचो अभ्यास म्हळ्यार अर्थशास्त्र. 2. मार्शल हाच्या मतान ‘उपजिविकेच्या साधना खातीर दिसपट्ट्या वेव्हारांत आशिल्ल्या मनशांचो अभ्यास म्हळ्यार अर्थशास्त्र.’ 3. संपत्तीचो अभ्यास म्हळ्यार अर्थशास्त्र.‘संपत्तीचें शास्त्र’ वा ‘पैशांचें शास्त्र’ अश्यो ज्यो अर्थशास्त्राच्यो व्याख्या आसात. त्य बऱ्योच संकुचित आसात अशें जाणकारांचें मत आसा. नॅसो सिनाअर, एस्. मिल, डब्ल्यू. एस्. जेव्हन्स ह्या अभिजात अर्थशास्त्रज्ञांच्या मतान, अर्थशास्त्र हें एक पुराय वस्तुनिश्ठ निगमनात्मक (Deductive)शास्त्र आनी संपत्ती हो ह्या शास्त्राचो अभ्यास विशय जावन आसा.
 
