--- a/आंबेली.mw
+++ b/आंबेली.mw
@@ -86,6 +86,12 @@
 
 ﻿गांवांत १ कुटुंब कल्याणकेंद्र आसा.
 
+== वैजकी सुविधा (अशासकीय) ==
+
+
+
+﻿गांवांत १ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
+
 == नितळसाण ==
 
 == दळणवळण आनीक येरादारी ==
