*Empty MediaWiki Message*

--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -64,3 +64,5 @@
   सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA C T (५ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वृद्धाश्रम CANDOLIM C T (६ किमी) हांगां आसा.
   सगळ्यांत लागीं शासकीय खेळांगण MAPUSA (१२ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (९ किमी) हांगां आसा.
+  सगळ्यांत लागीं खाजगी सभाघर PANAJI (९ किमी) हांगां आसा.
