--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -43,3 +43,7 @@
 ﻿गांवांत १ शासकीय अनौपचारिक प्रशिक्षणकेंद्र  आसा. 
 सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (QUELA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 == वैजकी सुविधा (शासकीय) ==
+सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+﻿गांवांत १ प्राथमिक आरोग्य केंद्र आसा.
+गांवांत २ प्राथमिक आरोग्य उपकेंद्र  आसा.
+﻿गांवांत १ प्रसूति आनी बालकल्याण केंद्र आसा.
