--- a/उतोड्डें.mw
+++ b/उतोड्डें.mw
@@ -51,7 +51,7 @@
 
 == उतोड्डें (६२६८९३) ==
 
-उतोड्डें हे दक्षिण गोवा जिल्ह्यातल्या सास्टी तालुक्यातील ३१४ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ५१६ कुटुंबाचे व पुराय २०१८ लोकसंख्या आसा. हांगा लागीचे शार [[मडगांव]]   १५ किलोमीटर अंतरावर आसा. हांगा ९४३ दादले आनीक १०७५ बायला आसा. हांगा अनुसूचित जातीचे लोक ० आसून अनुसूचित जमातीचे ११ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६८९३  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+उतोड्डें हे दक्षिण गोवा जिल्ह्यातल्या सास्टी तालुक्यातलो ३१४ हेक्टर क्षेत्राचे गांव आसून २०११ च्या जनगणनेनुसार ह्या गावात ५१६ कुटुंबाचे व पुराय २०१८ लोकसंख्या आसा. हांगा लागीचे शार [[मडगांव]]   १५ किलोमीटर अंतरावर आसा. हांगा ९४३ दादले आनीक १०७५ बायला आसा. हांगा अनुसूचीत जातीचे लोक ० आसून अनुसूचीत जमातीचे ११ लोक आसात. ह्या गांवाचो जनगणनेतलो स्थल निर्देशांक ६२६८९३  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
 
 == साक्षरताय ==  
 * एकूण साक्षर लोकसंख्या: १६६७
