*Empty MediaWiki Message*

--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -66,3 +66,4 @@
   सगळ्यांत लागीं शासकीय खेळांगण MAPUSA (१२ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (९ किमी) हांगां आसा.
   सगळ्यांत लागीं खाजगी सभाघर PANAJI (९ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  PANAJI (९ किमी) हांगां आसा.
