--- a/विधवा.mw
+++ b/विधवा.mw
@@ -1,5 +1,5 @@
 [[File:Widow India 1774-1781.jpg|thumb|विधवा 1774-1781]]
-'विधवा' बायल ही एक घोव नाशिल्ली व्यक्ती. ती समाजाचो एक भाग. विधवा बायलेक जायते प्रसंग सतायतात. धर्म तरी तिचें दूख समजून घेता व्हय? संवसारांत कितलेच धर्म आसात. संख्येन व्हड आशिल्ल्या धर्मांची नदर तांचे विशीं कितें कांय? धर्म तांचे प्रस्न सुटयता वा तांचे प्रस्न घुसपयता? धर्म तांच्या घायांक मलम लायता वा ताच्या घायार मीठ घालता? धर्म तांची उकळणी करता वा तांचेर चेपण घालता? असल्या प्रस्नाक फूडें जाप सोदया. धर्माचीं बंधना आनी धर्माक लागून समाजाचे चाली रितीचेर व्हड चेपण पडटा अशें आमकां जाणवता. हेच नदरेतल्यान हो लेख विणिल्लो आसा. 
+'विधवा' बायल ही एक घोव नाशिल्ली व्यक्ती. ती समाजाचो एक भाग. विधवा बायलेक जायते प्रसंग सतायतात. धर्म तरी तिचें दूख समजून घेता व्हय? संवसारांत कितलेच धर्म आसात. संख्येन व्हड आशिल्ल्या धर्मांची नदर तांचे विशीं कितें कांय? धर्म तांचे प्रस्न सुटयता वा तांचे प्रस्न घुसपयता? धर्म तांच्या घायांक मलम लायता वा ताच्या घायार मीठ घालता? धर्म तांची उकळणी करता वा तांचेर चेपण घालता? असल्या प्रस्नाक फूडें जाप सोदया. धर्माचीं बंधना आनी धर्माक लागून समाजाच्या चाली रितींचेर व्हड चेपण पडटा अशें आमकां जाणवता. हेच नदरेतल्यान हो लेख विणिल्लो आसा. 
 =='''विधवे विशीं समज'''==
  
 घोव मेलो म्हणटकच बायल विधवा जाता. बायल विधवा जाली म्हणटकच ती कोणाक नाका. घोवाच्या मरणांत सगळीं नातीं फोडांत देवतात. घोव मरप वा जितो उरप हें तिच्या हातांत नासता तरी घर भर लोक तिका कपल फुटकी म्हण पावलां कणकणीं हिणसायतात. भोव करून घोव तरणे पिरायेचेर मेलो जाल्यार अदीक तळमळे भोगचे पडटात. तिचें जिवीत भारादीक जावंक पावता. ’वटर’ ह्या सिनेमात मधू दिदी हें पात्र अशें म्हणटा “जब पती मरता तो पत्नी आदी मरती हे!” ह्या सिनेमांत विधवा बायलांचेर खोलायेन उजवाड घातला. हे संबंदीत न. ध. बोरकार बिम्ब मासिकांत विधवा विशीं बरयतना अशें म्हणटा.
