--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -67,3 +67,6 @@
 सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (९ किमी) हांगां आसा.
   सगळ्यांत लागीं खाजगी सभाघर PANAJI (९ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  PANAJI (९ किमी) हांगां आसा.
+
+== उत्पादन ==
+पिळर्ण ह्या शारांत मुखा वयल्या वस्तूंचें उत्पादन जाता ( म्हत्वाच्या देंवत्या अनुक्रमान): TELEPHONE CABLES,MEDICINES,PERFUMES
