--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -47,3 +47,10 @@
 ﻿गांवांत १ प्राथमिक आरोग्य केंद्र आसा.
 गांवांत २ प्राथमिक आरोग्य उपकेंद्र  आसा.
 ﻿गांवांत १ प्रसूति आनी बालकल्याण केंद्र आसा.
+गांवांत १ क्षयरोग उपचार केंद्र  आसा.
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत २ पर्यायी वैजकी रुग्णालय आसा.
+सगळ्यांत लागीं दवाखानो ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+﻿गांवांत १ पशुवैजकी रुग्णालय आसा.
+
+﻿गांवांत १ कुटुंब कल्याणकेंद्र आसा.
