--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -36,3 +36,5 @@
 गांवांत १ खाजगी प्राथमिक शाळा आसा.
 ﻿गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
 गांवांत १ खाजगी माध्यमिक शाळा आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (MULGAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (MAPUSA) १० किलोमिटर परस चड अंतराचेर आसा.
