*Empty MediaWiki Message*

--- a/मडकय.mw
+++ b/मडकय.mw
@@ -44,11 +44,11 @@
 शारांत २ खाजगी माध्यमिक शाळा आसा.  
 शारांत १ खाजगी उच्च माध्यमिक शाळा आसा.  
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) PONDA (१८ किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१५ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) पणजी (१५ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) BANDORA CT (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं "सरकारी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" CANDOLA CT (१० किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (३१ किमी) हांगां आसा.
-सगळ्यांत लागीं सरकारी पदवी महाविद्यालय- विद्यापीठ PANAJI (३७ किमी) हांगां आसा.
+सगळ्यांत लागीं सरकारी पदवी महाविद्यालय- विद्यापीठ पणजी (३७ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PONDA (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी वैजकी महाविद्यालय BAMBOLIM CT (३७ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी अभियांत्रिकी महाविद्यालय BANDORA CT (१६ किमी) हांगां आसा.
