--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -38,3 +38,5 @@
 गांवांत १ खाजगी माध्यमिक शाळा आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (MULGAO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं पदवी महाविद्यालय (MAPUSA) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा
