*Empty MediaWiki Message*

--- a/मडकय.mw
+++ b/मडकय.mw
@@ -47,12 +47,12 @@
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) पणजी (१५ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) BANDORA CT (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं "सरकारी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" CANDOLA CT (१० किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (३१ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी पणजी (३१ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी पदवी महाविद्यालय- विद्यापीठ पणजी (३७ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PONDA (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी वैजकी महाविद्यालय BAMBOLIM CT (३७ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी अभियांत्रिकी महाविद्यालय BANDORA CT (१६ किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  PANAJI (३१ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  पणजी (३१ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी पॉलिटेक्निक PANAJI (३१ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी वेवसायीक प्रशिक्षण शाळा PANAJI (२५ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  PONDA (१६ किमी) हांगां आसा.
