--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -42,3 +42,5 @@
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा
 सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (BICHOLIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MAPUSA) १० किलोमिटर परस चड अंतराचेर आसा.
