--- a/अंदमान_आनी_निकोबार.mw
+++ b/अंदमान_आनी_निकोबार.mw
@@ -24,7 +24,7 @@
 अंदमान- निकोबार जुंव्याचेर शारांत आनी गांवगिऱ्या भागांत मोटार, बस, ट्रक आदी वाहना वरवीं येरादारीची वेवस्था आसा. ते भायर दरेक जुंव्याचेर वचूंक बोटीची वेवस्था आसा. अंदमानांत पोर्ट ब्लेअर, पोर्ट कॉर्नवालीस, मायाबंदर आनी निकोबारांत कामोर्ता, त्रिंकत, नानकवरी अशीं बंदरां आसात. भारता कडेन अंदमान निकोबार जुंव्यांची येरादारी आग बोटी वरवीं जाता. कलकत्ता ते पोर्ट ब्लेअर शारांक रंगून मार्गान विमान येरादारीची वेवस्था आसा. मद्रास सावनय थंय विमानान वचपाची वेवस्था आसा.
 
 == '''लोक आनी समाजजीण''' ==
-अंदमानातले मुळ लोक नेग्रिटी वंशाचे. जारवा, ओंगी सेंटिनेली आनी शॉमपेन ह्यो तांच्यो पोटजाती आसात. तांच्या पंगडांच्या मुखेल्या कडेन सगळे हक्क आसतात. ताचीं घरां घुमटा आकाराचीं आसतात. हांगाचें हवामान उश्ण आशिल्ल्यान हांगाचे लोक लज राखपा पुरतीं झाडांची पानां वापरतात. हे लोक बुद्धीन मंद आनी खूब सोशीक आसात. तांचो रंग काळो आनी कात तुकतुकीत. तांच्या जेवणांत नाल्ल, नुस्तें, रानमाजर, कांसव, कंदमुळां, म्होंव हांचो आस्पाव आसता. घोव वा बायल मरतकच तांणी परतें लग्न करूं येता. पुलुगा ह्या दैवताक ते मानतात. सद्या अंदमानांतल्या ह्या आदिवासी लोकांची संख्या उणी जायत चल्ल्या. तातूंत बायलो तर सामक्योच उण्यो.गा कॉफी, कोको, रबर आनी मसाल्यांचे पदार्थ हांचे उत्पादन करपाचो यत्न भारत सरकारा वरवीं चल्ला.
+अंदमानांतले मूळ लोक नेग्रिटी वंशाचे. जारवा, ओंगी सेंटिनेली आनी शॉमपेन ह्यो तांच्यो पोटजाती आसात. तांच्या पंगडांच्या मुखेल्या कडेन सगळे हक्क आसतात. ताचीं घरां घुमटा आकाराचीं आसतात. हांगाचें हवामान उश्ण आशिल्ल्यान हांगाचे लोक लज राखपा पुरतीं झाडांची पानां वापरतात. हे लोक बुद्धीन मंद आनी खूब सोशीक आसात. तांचो रंग काळो आनी कात तुकतुकीत. तांच्या जेवणांत नाल्ल, नुस्तें, रानमाजर, कांसव, कंदमुळां, म्होंव हांचो आस्पाव आसता. घोव वा बायल मरतकच तांणी परतें लग्न करूं येता. पुलुगा ह्या दैवताक ते मानतात. सद्या अंदमानांतल्या ह्या आदिवासी लोकांची संख्या उणी जायत चल्ल्या. तातूंत बायलो तर सामक्योच उण्यो.गा कॉफी, कोको, रबर आनी मसाल्यांचे पदार्थ हांचे उत्पादन करपाचो यत्न भारत सरकारा वरवीं चल्ला.
 
 निकोबार लोकांत अंदमानी लोकां परस खुबशें वेगळेपण आसा. हांगाचे मुळ लोक पॉलिनेशयन गटाचे आसात. गंवा रंगाच्या ह्या लोकांची नाकां चेपटीं आसतात. तांच्यांत जाती जमाती नात. पूण वेगवेगळ्या जुंव्यार राविल्ल्यान तांच्यांत कांय प्रमाणांत फरक दिसता. तांच्या जेवणांत चड करून नाल्ल, नुस्तें, फळां आनी भात आसता. केन्ना केन्नाय दुकरां, कोंबड्यो, बदकां हांचोय तांच्या जेवणांत आस्पाव जाता. ह्या लोकांक पान तंबाखूची आवड आसा. संगीत, नाच आदी मळारूय तांकां बरी रूच आसा. हे लोक आयदनां तयार करप, कुरपणे, खोंटले विणप, शेंदऱ्यो, लोखणाचां हत्यारां तयार करप असले आनी हेर धंदे करतात. हालींच निकोबार लोकामदीं फुटबॉल खेळपाची आवड निर्माण जाल्या.
 
