--- a/उतोड्डें.mw
+++ b/उतोड्डें.mw
@@ -64,14 +64,14 @@
 गांवांत १ खाजगी प्राथमिक शाळा आसा.
 गांवांत १ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
 गांवांत १ खाजगी माध्यमिक शाळा आसा.
-सगळ्यांत लागीं उच्च माध्यमिक शाळा (MAJORDA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमीक शाळा (MAJORDA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं पदवी महाविद्यालय (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक (VERNA CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षण केंद्र  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
 
 == वैजकी सुविधा (शासकीय) ==
