--- a/असोडें.mw
+++ b/असोडें.mw
@@ -119,3 +119,5 @@
 
 
 सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग १० किलोमिटर परस चड अंतराचेर आसा.
+== बाजार आनी सावकारी पेडी ==
+गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम १० किलोमिटर परस चड अंतराचेर आसा.
