/* वैजकी सुविधा (अशासकीय) */

--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -57,3 +57,6 @@
 == वैजकी सुविधा (अशासकीय) ==
 गांवांत २ बाह्यरुग्ण वैजकी सुविधा आसा.
 गांवांत २ निवासी आनी बाह्यरुग्ण वैजकी सुविधा आसा.
+﻿गांवांत १ खाजगी धर्मदाय रुग्णालय आसा.
+गांवांत २ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
+﻿गांवांत १  अन्य पदवीधर वैजक वेवसायी आसा.
