/* वैजकी सुविधा (अशासकीय) */

--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -60,3 +60,5 @@
 ﻿गांवांत १ खाजगी धर्मदाय रुग्णालय आसा.
 गांवांत २ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
 ﻿गांवांत १  अन्य पदवीधर वैजक वेवसायी आसा.
+गांवांत ५ पिढीजात वैद्य आसा.
+गांवांत २ वखदालय आसा.
