*Empty MediaWiki Message*

--- a/मडकय.mw
+++ b/मडकय.mw
@@ -53,7 +53,7 @@
 सगळ्यांत लागीं सरकारी वैजकी महाविद्यालय BAMBOLIM CT (३७ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी अभियांत्रिकी महाविद्यालय BANDORA CT (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  पणजी (३१ किमी) हांगां आसा.
-सगळ्यांत लागीं सरकारी पॉलिटेक्निक PANAJI (३१ किमी) हांगां आसा.
+सगळ्यांत लागीं सरकारी पॉलिटेक्निक पणजी (३१ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी वेवसायीक प्रशिक्षण शाळा PANAJI (२५ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  PONDA (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी अपंगां खातीर खाशेली शाळा QUELA CT (१८ किमी) हांगां आसा.
