/* वैजकी सुविधा (अशासकीय) */

--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -59,3 +59,7 @@
 ﻿गांवांत १ कुटुंब कल्याणकेंद्र आसा.
 
 == वैजकी सुविधा (अशासकीय) ==
+
+गांवांत ४ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
+गांवांत २  अन्य पदवीधर वैजक वेवसायी आसा.
+गांवांत २ वखदालय आसा.
