--- a/उतोड्डें.mw
+++ b/उतोड्डें.mw
@@ -132,8 +132,8 @@
 गावाचो पीन कोड ४०३७१३  आसा.
 गांवांत दूरध्वनी उपलब्ध आसा.
 गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा.
-गांवांत मोबाईल फोन सुवीधा उपलब्ध आसा.
-गांवांत इंटरनेट सुवीधा उपलब्ध आसा.
+गांवांत मोबाईल फोन सुविधा उपलब्ध आसा.
+गांवांत इंटरनेट सुविधा उपलब्ध आसा.
 गांवांत खाजगी कूरियर उपलब्ध आसा.
 गांवांत शासकीय बस सेवा उपलब्ध आसा.
 गांवांत खाजगी बस सेवा उपलब्ध आसा.
@@ -154,8 +154,6 @@
 
 
 सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-
-
 
 == बाजार आनी सावकारी पेडी ==
 गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम १० किलोमिटर परस चड अंतराचेर आसा.
