/* वैजकी सुविधा (अशासकीय) */

--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -63,3 +63,5 @@
 गांवांत ४ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
 गांवांत २  अन्य पदवीधर वैजक वेवसायी आसा.
 गांवांत २ वखदालय आसा.
+
+== पिवपाचे उदक ==
