--- a/उतोड्डें.mw
+++ b/उतोड्डें.mw
@@ -195,19 +195,18 @@
 
 
 == जमिनीचो वापर ==
-उतोड्डें ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+उतोड्डें ह्या गांवात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ०
 * शेतकामा खातीर ना वापरिल्ली जमीन: ३५
 * ओसाड आनी लागवड ना केल्ली जमीन: ०
 * कुरणे आनी अन्य मळ: ०
-* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* विबिन्न झाडांपेडा, पिकांतर्गत येवपी जमीन: ०
 * लागवडयोग्य पडीक जमीन: १.९
 * कायमस्वरूपी पडीक जमीन: ०
 * सद्यस्थितींत पडीक जमीन: ०
 * पिकां सकयली जमीन: २७७.१
 * एकूण कोरड व्हांवपी जमीन: २७०.२
 * एकूण बागायत जमीन: ६.९
-
 
 == शिंपणावळ सुविधा ==
 शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
