--- a/पार्शें.mw
+++ b/पार्शें.mw
@@ -1,1 +1,1 @@
-पार्शें हें उत्तर गोवा जिल्ल्यांतल्या पेडणें तालुक्यांतलें १०.४४ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत १०३० कुटुंबां वा वट्ट
+पार्शें हें उत्तर गोवा जिल्ल्यांतल्या पेडणें तालुक्यांतलें १०.४४ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत १०३० कुटुंबां वा वट्ट ४६२७ लोकसंख्या आसा. जिल्लो मुख्यालय, PANAJI हांगां २८ किलोमीटर अंतराचेर आसा. राज्याची राजधानी PANAJI हांगां २८ किलोमीटर
