--- a/उतोड्डें.mw
+++ b/उतोड्डें.mw
@@ -218,12 +218,11 @@
 
 
 == उत्पादन ==
-उतोड्डें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): COCONUTS,WATERMELONS,CEREALS
+उतोड्डें ह्या गांवांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): COCONUTS,WATERMELONS,CEREALS
 
 
 [[वर्ग:[[दक्षिण गोवा]]]]
 [[वर्ग:[[सास्टी]]]]
 [[वर्ग:[[दक्षिण गोवा जिल्ल्यांतले गांव]]]]
-
 
 == संदर्भ ==
