--- a/कालवें.mw
+++ b/कालवें.mw
@@ -29,3 +29,9 @@
 * एकूण साक्षर लोकसंख्या: ३०९
 * साक्षर पुरुश लोकसंख्या: १४६ (८१.११%)
 * साक्षर स्त्री लोकसंख्या: १६३ (७३.०९%)
+== शैक्षणिक सुविधा ==  
+ सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (ALDONA CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ ﻿गांवांत १ खाजगी प्राथमिक शाळा आसा.
+ सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (ALDONA CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं माध्यमिक शाळा (ALDONA CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (ALDONA CT) ५ किलोमिटरा परस कमी अंतराचेर आसा.
