--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -74,3 +74,7 @@
 गांवांत तळी/कोंड उदक पुरवण आसा.
 गांवांत अन्य पद्धतीचे उदक पुरवण आसा.
 == नितळसाण ==
+गांवांत बंद गटार उपलब्ध आसा.
+गांवांत उघडें गटार उपलब्ध आसा.
+नीट जलस्त्रोतांत सोडिल्ले सांड उदक
+हो क्षेत्र संपूर्ण स्वच्छता अभियानात आसा
