--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -92,3 +92,5 @@
 गांवांत उपपोस्ट ऑफीस उपलब्ध आसा.
 गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध आसा.
 गावाचो पीन कोड ४०३५०३  आसा.
+गांवांत दूरध्वनी उपलब्ध आसा.
+गांवांत सार्वजनीक दूरध्वनी केंद्र उपलब्ध आसा.
