/* लोक आनी समाजजीण */

--- a/अंदमान_आनी_निकोबार.mw
+++ b/अंदमान_आनी_निकोबार.mw
@@ -26,7 +26,7 @@
 == '''लोक आनी समाजजीण''' ==
 अंदमानांतले मूळ लोक नेग्रिटी वंशाचे. जारवा, ओंगी सेंटिनेली आनी शॉमपेन ह्यो तांच्यो पोटजाती आसात. तांच्या पंगडांच्या मुखेल्या कडेन सगळे हक्क आसतात. ताचीं घरां घुमटा आकाराचीं आसतात. हांगाचें हवामान उश्ण आशिल्ल्यान हांगाचे लोक लज राखपा पुरतीं झाडांची पानां वापरतात. हे लोक बुद्धीन मंद आनी खूब सोशीक आसात. तांचो रंग काळो आनी कात तुकतुकीत. तांच्या जेवणांत नाल्ल, नुस्तें, रानमाजर, कांसव, कंदमुळां, म्होंव हांचो आस्पाव आसता. घोव वा बायल मरतकच तांणी परतें लग्न करूं येता. पुलुगा ह्या दैवताक ते मानतात. सद्या अंदमानांतल्या ह्या आदिवासी लोकांची संख्या उणी जायत चल्ल्या. तातूंत बायलो तर सामक्योच उण्यो.गा कॉफी, कोको, रबर आनी मसाल्यांचे पदार्थ हांचे उत्पादन करपाचो यत्न भारत सरकारा वरवीं चल्ला.
 
-निकोबार लोकांत अंदमानी लोकां परस खुबशें वेगळेपण आसा. हांगाचे मूळ लोक पॉलिनेशयन गटाचे आसात. गंवा रंगाच्या ह्या लोकांची नाकां चेपटीं आसतात. तांच्यांत जाती जमाती नात. पूण वेगवेगळ्या जुंव्यार राविल्ल्यान तांच्यांत कांय प्रमाणांत फरक दिसता. तांच्या जेवणांत चड करून नाल्ल, नुस्तें, फळां आनी भात आसता. केन्ना केन्नाय दुकर, कोंबड्यो, बदकां हांचोय तांच्या जेवणांत आस्पाव जाता. ह्या लोकांक पान तंबाखूची आवड आसा. संगीत, नाच आदी मळारूय तांकां बरी रूच आसा. हे लोक आयदनां तयार करप, कुरपणे, खोंटले विणप, शेंदऱ्यो, लोखणाचां हत्यारां तयार करप असले आनी हेर धंदे करतात. हालींच निकोबार लोकामदीं फुटबॉल खेळपाची आवड निर्माण जाल्या.
+निकोबार लोकांत अंदमानी लोकां परस खुबशें वेगळेपण आसा. हांगाचे मूळ लोक पॉलिनेशयन गटाचे आसात. गंवा रंगाच्या ह्या लोकांची नाकां चेपटीं आसतात. तांच्यांत जाती जमाती नात. पूण वेगवेगळ्या जुंव्यार राविल्ल्यान तांच्यांत कांय प्रमाणांत फरक दिसता. तांच्या जेवणांत चड करून नाल्ल, नुस्तें, फळां आनी भात आसता. केन्ना केन्नाय दुकर, कोंबड्यो, बदकां हांचोय तांच्या जेवणांत आस्पाव जाता. ह्या लोकांक पान तंबाखूची आवड आसा. संगीत, नाच आदी मळारूय तांकां बरी रूच आसा. हे लोक आयदनां तयार करप, कुरपणे, खोंटले विणप, शेंदऱ्यो, लोखणाचीं हत्यारां तयार करप असले आनी हेर धंदे करतात. हालींच निकोबार लोकामदीं फुटबॉल खेळपाची आवड निर्माण जाल्या.
 
 अंदमान निकोबार जुंव्यार शिक्षणीक मळाचेर उदरगत जायत आसा. हांगा साक्षरतेचें प्रमाण 51.53% इतलें आसा. (1981). तेभायर भारतांत वचून फुडलें शिक्षण घेवपाची येवजण हांगाच्या भुरग्यां खातीर आसा. ह्या प्रदेशांत जायत्या भलायकी केंद्रांची वेवस्था आसा. निकोबारांत भलायकी येवजणेखाला तरेकवार रोगां खातीर नियंत्रण केंद्रां आसात. हांगाच्या पोर्ट ब्लेअर आनी कारनिकोबार हांगा माहिती केंद्रां आनी ग्रंथालयां आसात. पोर्ट ब्लेअरच्यान सरकारी विवरण पत्रिका उजवाडाक येता.
 
