--- a/आरोशीं.mw
+++ b/आरोशीं.mw
@@ -1,41 +1,70 @@
-{{माहितीचौकट भारतीय न्यायक्षेत्र
-|प्रकार = गांव
-|जनगणना २०११_स्थलनिर्देशांक=626884
-|थळावें_नांव=आरोशीं
-|तालुका_नांव=मुरगांव
-|जिल्लो_नांव=दक्षिण गोवा
-|राज्य_नांव=गोंय
-|विभाग=
-|जिल्लो=[[दक्षिण गोवा]]
-|तालुका_नांवां=[[मुरगांव]]
-|लागींचे_शार=[[मडगाव]]
-|अक्षांश=
-|रेखांश=
-|शोधक_स्थान=right
-|क्षेत्रफळ_एकूण=3.40
-|समुद्र तळा पसून उंची=
-|लोकसंख्या_एकूण=1721
-|लोकसंख्या_वर्स=2011
-|लोकसंख्या_घनत्व=506
-|लोकसंख्या_पुरुश=808
-|लोकसंख्या_स्त्री=913
-|लिंग_गुणोत्तर=1129
-|अधिकृत_भास=[[कोंकणी]]
+{{Infobox settlement
+| name                   = आरोशीं
+| native_name            = 
+| native_name_lang       = 
+| other_name             = 
+| nickname               = 
+| settlement_type        = गांव
+| image_skyline          = 
+| image_alt              = 
+| image_caption          = 
+| pushpin_map            = India Goa 
+| pushpin_label_position = 
+| pushpin_map_alt        = 
+| pushpin_map_caption    = आरोशीं गोंयातलो
+| latd                   = 15.33
+| latm                   =
+| lats                   = 
+| latNS                  = N
+| longd                  = 73.90 
+| longm                  = 
+| longs                  = 
+| longEW                 = E
+| coordinates_display    = 
+| subdivision_type       = देश
+| subdivision_name       = भारत
+| subdivision_type1      = राज्य
+| subdivision_name1      = गोंय
+| subdivision_type2      = जिल्लो
+| subdivision_name2      = दक्षिण गोंय
+| subdivision_type3      = तालुका
+| subdivision_name3      = मुरगांव
+| unit_pref              = Metric
+| area_footnotes         = 
+| area_rank              = 
+| area_total_km2         =
+| population_total       = १७२१
+| population_as_of       = २०११
+| population_rank        = 
+| population_density_km2 = auto
+| population_demonym     = 
+| population_footnotes   = 
+| timezone1              = इंडियन स्टांडर्ड टाइम
+| utc_offset1            = +५:३०
+| postal_code_type       = 
+| postal_code            = 
+| area_code              = ९१ ०८३२
+| website                = 
+| footnotes              = 
 }}
 == आरोशीं (६२६८८४) ==
 
 आरोशीं हे दक्षिण गोवा जिल्ह्यातल्या मुरगांव तालुक्यातील ३४०.०१ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ४२६ कुटुंबाचे व पुराय १७२१ लोकसंख्या आसा. हांगा लागीचे शार MARGAO १२ किलोमीटर अंतरावर आसा. हांगा ८०८ दादले आनीक ९१३ बायला आसा. हांगा अनुसूचित जातीचे लोक ९ आसून अनुसूचित जमातीचे २८ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६८८४  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+
 == साक्षरताय ==  
+
 * एकूण साक्षर लोकसंख्या: १३७४
 * साक्षर पुरुश लोकसंख्या: ६५१ (८०.५७%)
 * साक्षर स्त्री लोकसंख्या: ७२३ (७९.१९%)
+
 == शैक्षणिक सुविधा ==  
- सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (CANSAULIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
- सगळ्यांत लागीं प्राथमिक शाळा (CANSAULIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
- सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (CANSAULIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
- सगळ्यांत लागीं माध्यमिक शाळा (CANSAULIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
- सगळ्यांत लागीं उच्च माध्यमिक शाळा (DABOLIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं पदवी महाविद्यालय (DABOLIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ 
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (CANSAULIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं प्राथमिक शाळा (CANSAULIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (CANSAULIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (CANSAULIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (DABOLIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (DABOLIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
  सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (VERNA CT) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
  सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
  सगळ्यांत लागीं वैवस्थापन  संस्था  (VERNA CT) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
