--- a/असोडें.mw
+++ b/असोडें.mw
@@ -157,3 +157,5 @@
 == जमिनीचो वापर ==
 असोडें ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ४१२.९६
+* शेतकामा खातीर ना वापरिल्ली जमीन: ३.०५
+* ओसाड आनी लागवड ना केल्ली जमीन: ६.४१
