--- a/असोडें.mw
+++ b/असोडें.mw
@@ -159,3 +159,6 @@
 * रान  : ४१२.९६
 * शेतकामा खातीर ना वापरिल्ली जमीन: ३.०५
 * ओसाड आनी लागवड ना केल्ली जमीन: ६.४१
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ६.०८
+* लागवडयोग्य पडीक जमीन: ८.५५
