--- a/असोडें.mw
+++ b/असोडें.mw
@@ -162,3 +162,5 @@
 * कुरणे आनी अन्य मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ६.०८
 * लागवडयोग्य पडीक जमीन: ८.५५
+* कायमस्वरूपी पडीक जमीन: ७.०१
+* सद्यस्थितींत पडीक जमीन: ११
