*Empty MediaWiki Message*

--- a/अकबर.mw
+++ b/अकबर.mw
@@ -6,7 +6,7 @@
 <ref> "Akbar (Mughal emperor)". Encyclopedia Britannica Online. Retrieved 18 January 2013.</ref>[[File:Akbar Shah I of India.jpg|thumb|अकबर]]
 '''अकबर''' (जल्मः 1542, उमरकोट- सिंध; मरणः 15 ऑक्टोबर 1605, आग्रा) भारताचो तिसरो मोगल सम्राट. ताचें पुराय नांवः अबूल फतेह जलाल ऊद्दीन मुहम्मद अकबर. फु़डाराक तो 'अकबर द ग्रेट' ह्या नांवान फामाद जालो. आवयचें नांव हमिदाबानू. ताचो बापूय हुमायूँ हाका अफगाणचो शेर शाह हाणें दिल्लीच्या राजासना वेल्यान निखळायल्ल्यान तो इराणाक पळून गेल्लो. तीन वर्सांच्या अकबराचो सांबाळ ताच्या बापोलयान केलो. 1555 वर्सा हुमायूँन हिंदुस्तान जिखलें आनी तो परत सत्तेर आयलो. 1556 वर्सा जेन्ना हुमायूँक अपघाती मरण आयले तेन्ना अकबराक फकत चवदा वर्सां आशिल्लीं. अकबराचो गुरू सरदार बहरामखान हाणें हुमायूँच्या मर्णा उपरांत अकबराचो प्रतिनिधी म्हूण स्वता राजकारभार पळोवपाक सुरवात केली.<ref>https://en.wikipedia.org/wiki/Akbar</ref>
 
-अकबर राज्याचो विस्तार असो जालोः 1556 –राज्यप्राप्ती. हेमूचेर पानीपताक जैत. 1557 –पंजाबचेर घुरी. सिकंदरशहा शरण आयलो. 1560 – बहरामखानाचें बंड मोडून काडलें. 1564 –चुन्नार घेतलें. 1565 – आग्र्याचो किल्लो बांदपाक सुरवात. 1568 – चितोड घेतलें. 1572 – गुजराताचेर घुरी. 1575 – बंगाल आनी बिहार शेकातळा हाडलीं. 1576 – मेवाडचो राजा राणा प्रतापसिंह हाचेर घुरी. 1577 – ओरिसांत दाऊदखानाचें बंड मोडलें. 1582 – आपलो भाव हकिम हाचेर जैत. 1587 – कश्मिर जिखलें. 1588 – सिंध प्रांत आपल्या राज्याक जोडलो. 1594 – कंदाहार जिखलें. 1596 – अहमदनगरचेर घुरी. वऱ्हाड घेतलें. 1600 – अहमदनगर जिखलें. 1605 – मेरेन अकबराच्या साम्राज्याचो विस्तार हिंदू कुश ते गोदावरी न्हंय आनी बंगाल ते गुजरात मेरेन पातळ्ळो.
+अकबराच्या राज्याचो विस्तार असो जालोः 1556 –राज्यप्राप्ती. हेमूचेर पानीपताक जैत. 1557 –पंजाबचेर घुरी. सिकंदरशहा शरण आयलो. 1560 – बहरामखानाचें बंड मोडून काडलें. 1564 –चुन्नार घेतलें. 1565 – आग्र्याचो किल्लो बांदपाक सुरवात. 1568 – चितोड घेतलें. 1572 – गुजराताचेर घुरी. 1575 – बंगाल आनी बिहार शेकातळा हाडलीं. 1576 – मेवाडचो राजा राणा प्रतापसिंह हाचेर घुरी. 1577 – ओरिसांत दाऊदखानाचें बंड मोडलें. 1582 – आपलो भाव हकिम हाचेर जैत. 1587 – कश्मिर जिखलें. 1588 – सिंध प्रांत आपल्या राज्याक जोडलो. 1594 – कंदाहार जिखलें. 1596 – अहमदनगरचेर घुरी. वऱ्हाड घेतलें. 1600 – अहमदनगर जिखलें. 1605 – मेरेन अकबराच्या साम्राज्याचो विस्तार हिंदू कुश ते गोदावरी न्हंय आनी बंगाल ते गुजरात मेरेन पातळ्ळो.
 
 == '''भुरगेंपण''' ==
  
