--- a/असोडें.mw
+++ b/असोडें.mw
@@ -164,3 +164,5 @@
 * लागवडयोग्य पडीक जमीन: ८.५५
 * कायमस्वरूपी पडीक जमीन: ७.०१
 * सद्यस्थितींत पडीक जमीन: ११
+* पिकां सकयली जमीन: ४१.९९
+* एकूण कोरड व्हांवपी जमीन: ४१.१७
