--- a/असोडें.mw
+++ b/असोडें.mw
@@ -170,3 +170,9 @@
 
 
 == शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०.८२
+* तळी: ०
+* ओढे: ०
+* हेर: ०
