*Empty MediaWiki Message*

--- a/अर्थशास्त्र.mw
+++ b/अर्थशास्त्र.mw
@@ -27,7 +27,7 @@
 ह्या विशयाचे दोन वांटे आसात. 
 == '''वैयश्टिक (Micro)''' ==
  
-सामश्टिक (Macro).
+== '''सामश्टिक (Macro)''' ==
 
 वैयश्टिक अर्थशास्त्र म्हळ्यार बारीकसाणीन केल्लो अभ्यास. हें पद्दतींत अर्थीक बाबीं संबंदी म्हळ्यार उत्पादन, वापर, वांटप ह्या सारक्या अर्थशास्त्रीय गजालींचो कुडक्या कुडक्यांनी आनी वैयक्तिक गजालींचेर भर दिवन केल्लो अभ्यास.
 
