--- a/मडकय.mw
+++ b/मडकय.mw
@@ -43,28 +43,28 @@
 शारांत २ खाजगी कनिश्ठ माध्यमिक शाळा  आसा.  
 शारांत २ खाजगी माध्यमिक शाळा आसा.  
 शारांत १ खाजगी उच्च माध्यमिक शाळा आसा.  
-सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) PONDA (१८ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) फोंडा (१८ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) पणजी (१५ किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) BANDORA CT (१६ किमी) हांगां आसा.
-सगळ्यांत लागीं "सरकारी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" CANDOLA CT (१० किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) बांदोडा CT (१६ किमी) हांगां आसा.
+सगळ्यांत लागीं "सरकारी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)"खांडोळा CT (१० किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी पणजी (३१ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी पदवी महाविद्यालय- विद्यापीठ पणजी (३७ किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PONDA (१६ किमी) हांगां आसा.
-सगळ्यांत लागीं सरकारी वैजकी महाविद्यालय BAMBOLIM CT (३७ किमी) हांगां आसा.
-सगळ्यांत लागीं सरकारी अभियांत्रिकी महाविद्यालय BANDORA CT (१६ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर फोंडा(१६ किमी) हांगां आसा.
+सगळ्यांत लागीं सरकारी वैजकी महाविद्यालय बांबोळेCT (३७ किमी) हांगां आसा.
+सगळ्यांत लागीं सरकारी अभियांत्रिकी महाविद्यालय बांदोडाCT (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  पणजी (३१ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी पॉलिटेक्निक पणजी (३१ किमी) हांगां आसा.
-सगळ्यांत लागीं सरकारी वेवसायीक प्रशिक्षण शाळा PANAJI (२५ किमी) हांगां आसा.
-सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  PONDA (१६ किमी) हांगां आसा.
+सगळ्यांत लागीं सरकारी वेवसायीक प्रशिक्षण शाळा पणजी (२५ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  फोंडा (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी अपंगां खातीर खाशेली शाळा QUELA CT (१८ किमी) हांगां आसा.
 
 == सुविधा ==
 सगळ्यांत लागीं खाजगी अऩाथाश्रम QUELA CT (१० किमी) हांगां आसा.
 सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA CT (२५ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी वृद्धाश्रम BANDORA CT (५ किमी) हांगां आसा.
-सगळ्यांत लागीं शासकीय खेळांगण PANAJI (२५ किमी) हांगां आसा.
+सगळ्यांत लागीं सरकारी खेळांगण PANAJI (२५ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (२५ किमी) हांगां आसा.
-सगळ्यांत लागीं शासकीय सभाघर PONDA (१६ किमी) हांगां आसा.
+सगळ्यांत लागीं सरकारी सभाघर PONDA (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  PONDA (१६ किमी) हांगां आसा.
 
 == उत्पादन ==
