--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -115,3 +115,5 @@
 सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग ५ किलोमिटरा परस कमी अंतराचेर आसा.
 
 == बाजार आनी सावकारी पेडी ==
+गांवांत एटीएम उपलब्ध आसा.
+गांवांत वेपाराविशी सावकारी पेडी उपलब्ध आसा.
