--- a/विधवा.mw
+++ b/विधवा.mw
@@ -2,8 +2,7 @@
 'विधवा' बायल ही एक घोव नाशिल्ली व्यक्ती. ती समाजाचो एक भाग. विधवा बायलेक जायते प्रसंग सतायतात. धर्म तरी तिचें दूख समजून घेता व्हय? संवसारांत कितलेच धर्म आसात. संख्येन व्हड आशिल्ल्या धर्मांची नदर तांचे विशीं कितें कांय? धर्म तांचे प्रस्न सुटयता वा तांचे प्रस्न घुसपयता? धर्म तांच्या घायांक मलम लायता वा ताच्या घायार मीठ घालता? धर्म तांची उकळणी करता वा तांचेर चेपण घालता? असल्या प्रस्नाक फूडें जाप सोदया. धर्माचीं बंधना आनी धर्माक लागून समाजाच्या चाली रितींचेर व्हड चेपण पडटा अशें आमकां जाणवता. हेंच नदरेतल्यान हो लेख विणिल्लो आसा.
  
 =='विधवे विशीं समज'==
-घोव मेलो म्हणटकच बायल विधवा जाता. बायल विधवा जाली म्हणटकच ती कोणाक नाका. घोवाच्या मरणांत सगळीं नातीं फोडांत देवतात. घोव मरप वा जितो उरप हें तिच्या हातांत नासता तरी लेगीत घर भर लोक तिका कपल फुटकी म्हण पावलां कणकणीं हिणसायतात. भोव करून घोव तरणे पिरायेचेर मेलो जाल्यार अदीक तळमळे भोगचे पडटात. तिचें जिवीत भारादीक जावंक पावता. ’वटर’ ह्या सिनेमात मधू दिदी हें पात्र अशें म्हणटा “जब पती मरता है, तो पत्नी आदी मरती है!” ह्या सिनेमांत विधवा बायलांचेर खोलायेन उजवाड घातला. हे संबंदीत न. ध. बोरकार 'बिम्ब' मासिकांत विधवा विशीं बरयतना अशें म्हणटा.
-“तीं (विधवा) कितली भुरगीं आसूं, कितलीय शिकिल्ली आसूं, कितलींय सुंदर आसूं. हेर बायलां मुखार तिची सुवात गौणूच. तिचेर नदर पडली म्हणटकूच पुराय समाजाचे दोळे तिरशे आनी वरशे जातात. तोंडाचेर काळोख पडटा.” (बिम्ब मासिक, मार्च 2013, पान 34) समाज तिका फाव सारको मान दिना.
+घोव मेलो म्हणटकच बायल विधवा जाता. बायल विधवा जाली म्हणटकच ती कोणाक नाका. घोवाच्या मरणांत सगळीं नातीं फोडांत देवतात. घोव मरप वा जितो उरप हें तिच्या हातांत नासता तरी लेगीत घर भर लोक तिका कपल फुटकी म्हण पावलां कणकणीं हिणसायतात. भोव करून घोव तरणे पिरायेचेर मेलो जाल्यार अदीक तळमळे भोगचे पडटात. तिचें जिवीत भारादीक जावंक पावता. ’वटर’ ह्या सिनेमात मधू दिदी हें पात्र अशें म्हणटा “जब पती मरता है, तो पत्नी आदी मरती है!” ह्या सिनेमांत विधवा बायलांचेर खोलायेन उजवाड घातला. हे संबंदीत न. ध. बोरकार 'बिम्ब' मासिकांत विधवा विशीं बरयतना अशें म्हणटा,“तीं (विधवा) कितली भुरगीं आसूं, कितलीय शिकिल्ली आसूं, कितलींय सुंदर आसूं. हेर बायलां मुखार तिची सुवात गौणूच. तिचेर नदर पडली म्हणटकूच पुराय समाजाचे दोळे तिरशे आनी वरशे जातात. तोंडाचेर काळोख पडटा.” (बिम्ब मासिक, मार्च 2013, पान 34) समाज तिका फाव सारको मान दिना.
 
 =='''संख्याशास्त्र'''==
 एका वर्सांक सुमार सात लाख बायलो विधवा जातात आनी चोवदा वर्सां पासून जगतात, असो सोद U.S Bureau हांची संख्या शास्त्र नोंद करता. (U.S Bureau of the census 1999) ह्याच वर्सां दादल्या रांडां परस विधवा बायलांचो आंकडो चार फावटी अदीक, म्हळ्यार 8.4 मिलीयन विधवा बायलो जाल्यार 1.9 मिलीयन दादले रांड आसात, अशें AARP नोंद करतात .यु.एस. सेंसस 200 हाच्या सोदा प्रमाणे 55 वर्सां आनी अदीक पिरायेच्यो विधवा बायलो 32% आसात जाल्यार दादले रांड हेंच पिरायेचे फकत 9% आसात. 
