--- a/मडकय.mw
+++ b/मडकय.mw
@@ -65,7 +65,7 @@
 सगळ्यांत लागीं सरकारी खेळांगण PANAJI (२५ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (२५ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी सभाघर PONDA (१६ किमी) हांगां आसा.
-सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  PONDA (१६ किमी) हांगां आसा.
+सगळ्यांत लागीं सरकारी भौशीक ग्रंथालय  PONDA (१६ किमी) हांगां आसा.
 
 == उत्पादन ==
 मडकय ह्या शारांत मुखा वयल्या वस्तूंचें उत्पादन जाता ( म्हत्वाच्या देंवत्या अनुक्रमान): STEEL,PHARMACEUTICAL PRODUCT,HOUSE UTENSILS
