--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -122,3 +122,9 @@
 गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा.
 गांवांत इतर पोषण आहार केंद्र उपलब्ध आसा.
+गांवांत 'आशा' कर्मचारी उपलब्ध आसा.
+गांवांत समाज भवन (टीव्ही वेवस्था आशिल्ली/नाशिल्ली) उपलब्ध आसा.
+गांवांत खेळांमळ उपलब्ध आसा.
+गांवांत खेळ / मनोरंजन केंद्र उपलब्ध आसा.
+गांवांत चित्रपटगृह / व्हिडिओ केंद्र उपलब्ध ना.सगळ्यांत लागीं चित्रपटगृह / व्हिडिओ केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत सार्वजनिक पुस्तकालय उपलब्ध आसा.
