--- a/असोडें.mw
+++ b/असोडें.mw
@@ -181,9 +181,10 @@
 असोडें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR,COCONUTS
 
 
-[[वर्ग:[[उत्तर गोवा]]]]
-[[वर्ग:[[सत्तरी]]]]
-[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
-
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:बारदेस तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
 
 == संदर्भ ==
