*Empty MediaWiki Message*

--- a/मडकय.mw
+++ b/मडकय.mw
@@ -60,7 +60,7 @@
 
 == सुविधा ==
 सगळ्यांत लागीं खाजगी अऩाथाश्रम QUELA CT (१० किमी) हांगां आसा.
-सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA CT (२५ किमी) हांगां आसा.
+सगळ्यांत लागीं नोकरी करपी बायलांकखातीर सरकारी राबीतो घर (हॉस्टेल) PENHA DE FRANCA CT (२५ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी वृद्धाश्रम BANDORA CT (५ किमी) हांगां आसा.
 सगळ्यांत लागीं सरकारी खेळांगण PANAJI (२५ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (२५ किमी) हांगां आसा.
