--- a/असोडें.mw
+++ b/असोडें.mw
@@ -184,7 +184,7 @@
 [[Category:devanagari]]	
 [[Category:गोंय़]]
 [[Category:उत्तर गोंय]]
-[[Category:बारदेस तालुका]]
+[[Category:सत्तरी तालुका]]
 [[Category:गोंयचीं शारां आनी जागे]]
 
 == संदर्भ ==
