--- a/आरोशीं.mw
+++ b/आरोशीं.mw
@@ -106,7 +106,8 @@
 गांवांत ग्रामीण उत्पादक केंद्रे ना जाल्यार सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
 गांवांत ग्रामीण सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
 गांवांत सामूहिक बायोगॅस ना जाल्यार उत्पादक पुनर्वापराची वेवस्था उपलब्ध ना.
-== दळणवळण आनीक येरादारी ==
+== दळणवळण आनी येरादारी ==
+
 गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत उपपोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं उपपोस्ट ऑफीस ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस ५ किलोमिटरा परस कमी अंतराचेर आसा.
@@ -133,6 +134,7 @@
 जिल्ल्यातलो अन्य रस्तो गांवाक जोडला.
 
 सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग १० किलोमिटर परस चड अंतराचेर आसा.
+
 == बाजार आनी सावकारी पेडी ==
 गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत वेपाराविशी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं वेपाराविशी सावकारी पेडी ५ किलोमिटरा परस कमी अंतराचेर आसा.
