--- a/कालवें.mw
+++ b/कालवें.mw
@@ -135,3 +135,36 @@
 ० वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 ० वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 == जमिनीचो वापर ==
+Calvim ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : ३.७८
+* शेतकामा खातीर ना वापरिल्ली जमीन: १०.४३
+* ओसाड आनी लागवड ना केल्ली जमीन: ५.२५
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: १.७१
+* लागवडयोग्य पडीक जमीन: ०
+* कायमस्वरूपी पडीक जमीन: ०
+* सद्यस्थितींत पडीक जमीन: ०
+* पिकां सकयली जमीन: ११३.८४
+* एकूण कोरड व्हांवपी जमीन: ११३.२९
+* एकूण बागायत जमीन: ०.५५
+
+
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०.५५
+* तळी: ०
+* ओढे: ०
+* हेर: ०
+
+
+== उत्पादन ==
+Calvim ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,CHILLIES
+
+
+[[वर्ग:[[उत्तर गोवा]]]]
+[[वर्ग:[[बार्देस]]]]
+[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
