*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -3,3 +3,5 @@
 
 लोकसंख्योप्रमाणे शाराचो दर्जो VI (लोकसंख्या_एकूण < ५,०००).
 शाराची नागरी स्थीती आसा. 'सर्वेक्षण शार'.
+
+१  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें BELGAUM हें शार १५८ किमी अंतराचेर आसा. ५  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें PUNE हें शार ५३४ किमी अंतराचेर आसा.
