--- a/कालवें.mw
+++ b/कालवें.mw
@@ -168,3 +168,28 @@ Calvim ह्या गावांत सकयल दिल्ल्या व
 
 
 == संदर्भ ==
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:गोंयचीं शारां आनी जागे]]
