--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -147,3 +147,10 @@
 * शेतकामा खातीर ना वापरिल्ली जमीन: ०
 * ओसाड आनी लागवड ना केल्ली जमीन: ०
 * कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: ४८
+* कायमस्वरूपी पडीक जमीन: ९०
+* सद्यस्थितींत पडीक जमीन: ०
+* पिकां सकयली जमीन: १७७
+* एकूण कोरड व्हांवपी जमीन: ११३
+* एकूण बागायत जमीन: ६४
