--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -151,3 +151,5 @@
 ० वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 
 == जमिनीचो वापर ==
+असनोडा ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : ०
