--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -153,3 +153,5 @@
 == जमिनीचो वापर ==
 असनोडा ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ०
+* शेतकामा खातीर ना वापरिल्ली जमीन: ३.९५
+* ओसाड आनी लागवड ना केल्ली जमीन: १८.६३
