--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -154,3 +154,10 @@
 * पिकां सकयली जमीन: १७७
 * एकूण कोरड व्हांवपी जमीन: ११३
 * एकूण बागायत जमीन: ६४
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ३०
+* तळी: ३४
+* ओढे: ०
+* हेर: ०
