--- a/पार्शें.mw
+++ b/पार्शें.mw
@@ -11,3 +11,5 @@
 एकूण साक्षर लोकसंख्या: ३७५४
 साक्षर पुरुश लोकसंख्या: १९९० (८४.८६%)
 साक्षर स्त्री लोकसंख्या: १७६४ (७७.३%)
+
+नितळसाण आनी पिवपाचें उदक
