--- a/असनोडा.mw
+++ b/असनोडा.mw
@@ -157,3 +157,5 @@
 * ओसाड आनी लागवड ना केल्ली जमीन: १८.६३
 * कुरणे आनी अन्य मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: ८६.७४
+* कायमस्वरूपी पडीक जमीन: ०
