*Empty MediaWiki Message*

--- a/कालवें.mw
+++ b/कालवें.mw
@@ -162,23 +162,8 @@ Calvim ह्या गावात जमिनीचो वापर सकय
 Calvim ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,CHILLIES
 
 
-[[वर्ग:[[उत्तर गोवा]]]]
-[[वर्ग:[[बार्देस]]]]
-[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
-
 
 == संदर्भ ==
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -192,4 +177,5 @@ Calvim ह्या गावांत सकयल दिल्ल्या व
 [[Category:devanagari]]	
 [[Category:गोंय़]]
 [[Category:उत्तर गोंय]]
+[[Category:बारदेस तालुका]]
 [[Category:गोंयचीं शारां आनी जागे]]
