*Empty MediaWiki Message*

--- a/जुवें.mw
+++ b/जुवें.mw
@@ -10,3 +10,6 @@
 * पावस (मिमी.): २९५६.८९
 * कमाल तापमान (सेल्सिअस): ३१.५३
 * किमान तापमान (सेल्सिअस): २३.५१
+
+== साक्षरता ==  
+* एकूण साक्षर लोकसंख्या: ३४८४
