--- a/शिरोडा.mw
+++ b/शिरोडा.mw
@@ -161,3 +161,5 @@
 * तळी: ३४
 * ओढे: ०
 * हेर: ०
+== उत्पादन ==
+शिरोडा ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,COUNTRY LIQUOR,JUTE BAGS,CASHEW NUTS,PAPAD,H.JEWELLARY,ARECANUTS,PICKLE,CANDLES
