--- a/पार्शें.mw
+++ b/पार्शें.mw
@@ -13,4 +13,4 @@
 साक्षर स्त्री लोकसंख्या: १७६४ (७७.३%)
 
 नितळसाण आनी पिवपाचें उदक
-शारांत उकती गटारवेवस्था आसा. ल्हान धरणांतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता. उदका पुरवणेची तांक 70 किलो लिटर आसा.
+शारांत उकती गटारवेवस्था आसा. ल्हान धरणांतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता. उदका पुरवणेची तांक 70 किलो लिटर आसा. सगळ्यांत लागीं आग पालोवपाची सुविधा PERNEM (९ किमी) हांगां आसा.
